--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.33.1",
     "@nuxtjs/style-resources": "^1.2.1",
-    "@pinia/nuxt": "^0.4.6",
+    "@pinia/nuxt": "0.2.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
