--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,30 @@
 {
-  "compilerOptions": {
-    "target": "ES2018",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "lib": [
-      "ESNext",
-      "ESNext.AsyncIterable",
-      "DOM"
-    ],
-    "esModuleInterop": true,
-    "allowJs": true,
-    "sourceMap": true,
-    "importHelpers": true,
-    "strict": true,
-    "noEmit": true,
-    "experimentalDecorators": true,
-    "baseUrl": ".",
-    "paths": {
-      "~/*": [
-        "./*"
-      ],
-      "@/*": [
-        "./*"
-      ]
+    "compilerOptions": {
+        "target": "ES2018",
+        "module": "ESNext",
+        "moduleResolution": "Node",
+        "lib": ["ESNext", "ESNext.AsyncIterable", "DOM"],
+        "esModuleInterop": true,
+        "allowJs": true,
+        "sourceMap": true,
+        "importHelpers": true,
+        "strict": true,
+        "noEmit": true,
+        "experimentalDecorators": true,
+        "baseUrl": ".",
+        "paths": {
+            "~/*": ["./*"],
+            "@/*": ["./*"]
+        },
+        "types": [
+            "@types/node",
+            "@nuxtjs/axios",
+            "@nuxt/types",
+            "vue-notification",
+            "nuxt-i18n",
+            "@nuxtjs/auth-next",
+            "@pinia/nuxt"
+        ]
     },
-    "types": [
-      "@nuxt/types",
-      "vue-notification",
-      "@nuxtjs/axios",
-      "@types/node",
-      "nuxt-i18n",
-      "@nuxtjs/auth-next",
-      "@pinia/nuxt",
-
-    ]
-  },
-  "exclude": [
-    "node_modules",
-  ]
+    "exclude": ["node_modules"]
 }
