--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.33.1",
+    "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/style-resources": "^1.2.1",
     "@pinia/nuxt": "0.2.1",
     "axios": "^0.27.2",
@@ -36,6 +37,7 @@
     "nuxt-property-decorator": "^2.9.1",
     "pinia": "^2.0.29",
     "v-mask": "^2.3.0",
+    "v-select": "^0.0.1",
     "vue-class-component": "^7.2.6",
     "vue-notification": "^1.3.20",
     "vue-property-decorator": "^9.1.2",
