Добавлен и исправлен модуль программы тренировок

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
             "@pinia/nuxt",
             "@nuxtjs/dayjs",
             "dayjs/plugin/relativeTime",
-            "vue-rate-it"
+            "@types/vue-clickaway"
         ]
     },
     "exclude": ["node_modules"]
