--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,9 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        "**/node_modules": true,
-        "node_modules": true
+        "**/node_modules": false,
+        "**/.vscode": true,
+        ".vscode": true
     },
     "explorerExclude.backup": {}
 }
