--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "v-mask": "^2.3.0",
     "v-select": "^0.0.1",
     "vue-class-component": "^7.2.6",
+    "vue-clickaway": "^2.2.2",
     "vue-notification": "^1.3.20",
     "vue-property-decorator": "^9.1.2",
+    "vue-select": "^3.20.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuelidate": "^0.7.7",
@@ -52,6 +54,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
+    "@types/vue-clickaway": "^2.2.0",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
