--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,9 +11,10 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        "**/node_modules": false,
+        "**/node_modules": true,
         "**/.vscode": true,
-        ".vscode": true
+        ".vscode": true,
+        "node_modules": true
     },
     "explorerExclude.backup": {}
 }
