--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nuxt-i18n": "^6.28.1",
     "nuxt-property-decorator": "^2.9.1",
     "pinia": "^2.0.29",
+    "portal-vue": "2.1.7",
     "v-mask": "^2.3.0",
     "v-select": "^0.0.1",
     "vue-class-component": "^7.2.6",
