--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "vue-property-decorator": "^9.1.2",
     "vue-select": "^3.20.2",
     "vue-server-renderer": "^2.6.14",
+    "vue-simple-calendar": "^5.0.1",
     "vue-template-compiler": "^2.6.14",
+    "vue2-simple-calendar": "^1.0.8",
     "vuelidate": "^0.7.7",
     "webpack": "^4.46.0"
   },
